deploy/060-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-operator
  annotations:
    image.openshift.io/triggers: |
      [
        {
          "from": {
            "kind":"ImageStreamTag",
            "name":"my-operator:latest"
          },
          "fieldPath":"spec.template.spec.containers[?(@.name==\"operator\")].image"
        }
      ]
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-operator
  template:
    metadata:
      labels:
        app: my-operator
    spec:
      serviceAccountName: my-operator
      containers:
        - name: operator
          image: my-operator
          imagePullPolicy: Always
