deploy/070-Service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app.kubernetes.io/name: my-operator
  name: my-operator
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: my-operator
