deploy/080-Route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: my-operator
  labels:
    app.kubernetes.io/name: my-operator
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: my-operator
